@@ -1,4 +1,11 @@
 ====================
+2018/2/13
+v 5-0.3
+
+- Removed getTask() from Opcode and changed Engine to generate the tasks itself.
+
+
+====================
 2018/1/30
 v 5-0.24
 
